# D3D9On12

./: CMakeLists.txt  DirectX-Direct3D9on12.man  README.md  packages.config
.github/workflows/: prBuild.yml
ShaderConverter/: CMakeLists.txt
ShaderConverter/Inc/: ShaderBinary.h  ShaderConv.h  ShaderConvCommon.h  ShaderConvInternal.h
ShaderConverter/ShaderBinary/: ShaderBinary.cpp  pch.hpp
ShaderConverter/ShaderConv/: ShaderBinaryEx.cpp  ShaderBinaryEx.hpp  ShaderConv.cpp  context.cpp  context.hpp  disasm.hpp  disasm20.cpp  gsconv.cpp  pch.h  psconv.cpp  shaderconv.hpp  tlvsconv.cpp  translator.cpp  vsconv.cpp
include/: 9on12.h  9on12Adapter.h  9on12AdapterFactory.inl  9on12AppCompat.h  9on12Caps.h  9on12Constants.h  9on12DDI.h  9on12DataLogger.h  9on12DecodeDevice.h  9on12Device.h  9on12DeviceFactory.inl  9on12DrawApis.inl  9on12DrawPrologEpilog.inl  9on12DrawTriangleFan.inl  9on12FastUploadAllocator.h  9on12Fence.h  9on12InputAssembly.h  9on12InputLayout.h  9on12PipelineState.h  9on12PipelineStateCache.h  9on12PipelineStateStructures.h  9on12PixelStage.h  9on12Query.h  9on12Registry.h  9on12Resource.h  9on12Shader.h  9on12SwapChain.h  9on12Util.h  9on12VertexStage.h  9on12VideoDevice.h  9on12VideoProcessDevice.h  9on12VideoTranslate.h  9on12Warning.h  9on12draw.inl  pch.h
interface/: d3d9on12ddi.h
src/: 9on12.cpp  9on12Adapter.cpp  9on12AppCompat.cpp  9on12Blit.cpp  9on12Constants.cpp  9on12DDIStub.cpp  9on12DecodeDevice.cpp  9on12Device.cpp  9on12Draw.cpp  9on12FastUploadAllocator.cpp  9on12Fence.cpp  9on12InputAssembly.cpp  9on12InputLayout.cpp  9on12PipelineState.cpp  9on12PipelineStateCache.cpp  9on12PixelStage.cpp  9on12Query.cpp  9on12Resource.cpp  9on12Shader.cpp  9on12SwapChain.cpp  9on12VertexStage.cpp  9on12VideoDevice.cpp  9on12VideoProcessDevice.cpp  CMakeLists.txt  d3d9on12.def  d3d9on12.rc
tst/: 9on12ShaderTests.cpp  9on12drawTests.cpp  CMakeLists.txt  HelloTest.cpp  README.md  main.cpp
tst/Mocks/: AdapterMock.h  ConstantsManagerMock.h  DeviceMock.h  DrawPrologEpilogMock.h  FastUploadAllocatorMock.h  InputAssemblyMock.h  PipelineStateCacheMock.h  PipelineStateMock.h  VertexStageMock.h
tst/include/: CommonTestHeader.h  Mocks.h
